Style Landingpage, samsung overflow bug

--- a/src/app/landingpage/landingpage.component.scss
+++ b/src/app/landingpage/landingpage.component.scss
@@ -1,3 +1,7 @@
+.backgrounds {
+  overflow-x: hidden;
+}
+
 .wrapper-landing {
   height: 100dvh;
   display: flex;
